# vps2

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  VpsPluginAudioProcessor.cpp  VpsPluginAudioProcessorEditor.cpp
src/dsp/processor/: VpsProcessor.cpp
src/dsp/synth/: VpsVoice.cpp
src/include/: VpsPluginAudioProcessor.hpp  VpsPluginAudioProcessorEditor.hpp
src/include/dsp/processor/: ProcessorBase.hpp  VpsProcessor.hpp
src/include/dsp/synth/: VpsSound.hpp  VpsVoice.hpp
